fixing video overflow

--- a/raaslab.css
+++ b/raaslab.css
@@ -23,6 +23,20 @@ body {
   color: rgba(255,213,32,.8);
 }
 
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 .container {
   margin-top: 30px;
   padding-bottom: 30px;
